--- a/index.html
+++ b/index.html
@@ -5,11 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Updock&display=swap" rel="stylesheet">
   </head>
 
   <body>
-    <h1>Hello, world!</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    
+    
+
+
+    <!--START of navbar-->
+<nav class="navbar navbar-expand-lg color ">
+  <div class="container-fluid navbarimage">
+    <a class="navbar-brand styleofnavbarwords">Brianna's Summer</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link  others styleofnavbarwords"  href="index.html"> Rating</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link others styleofnavbarwords " href="funfacts.html"> Music </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link others styleofnavbarwords" href="funfacts.html"> Pictures </a>
+        </li>
+
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+ <!--END of navbar-->
+ <div class="container">
+
+  <div class="bgpicture"> <img src="/images/barbiebackground.jpeg" alt="" srcset=""></div>
+
+ </div>
+
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
   
 </html>
