navabr and wallpaper

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
  <!--END of navbar-->
  <div class="container">
 
-  <div class="bgpicture"> <img src="/images/barbiebackground.jpeg" alt="" srcset=""></div>
+ <h1 class=""> I watched 
+  the <br>  Barbie Movie</h1>
 
  </div>
 
