added imgs, add cards and links

--- a/musicc.html
+++ b/musicc.html
@@ -19,7 +19,7 @@
     <!--START of navbar-->
 <nav class="navbar navbar-expand-lg color ">
   <div class="container-fluid navbarimage">
-    <a class="navbar-brand styleofnavbarwords active" href="index.html">Brianna's Summer</a>
+    <a class="navbar-brand styleofnavbarwords" href="index.html">Brianna's Summer</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -41,17 +41,57 @@
   </div>
 </nav>
  <!--END of navbar-->
- <div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <h1 class="maintext"> I watched the...</h1>
+
+ <!--START of cards-->
+ <div class="container-fluid justify-content-center">
+    <div class="row justify-content-center cardz">
+      
+<!--CARD NUMBER 1-->
+        <div class="card" style="width: 23rem; ">
+          <img src="/images/pinklizzopic.jpg" class="card-img-top pictureforcard" alt="...">
+          <div class="card-body">
+            <h5 class="card-title"> "Pink"</h5>
+            <p class="card-text">type</p>
+            <br>
+            <br>
+            <br>
+            <a href=https://www.youtube.com/watch?v=8uIxoCs7iv8" class="btn yesbutton" target="_blank">click to listen!</a>
+          </div>
+        </div>
+<!--CARD NUMBER 1-->
+
+  <!--CARD NUMBER 2-->
+        <div class="card" style="width: 23rem;">
+          <img src="/images/dancethenightpic.jpeg" class="card-img-top pictureforcard" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">"Dance the Night"</h5>
+            <p class="card-text">type </p>
+            <br>
+            <br>
+            <br>
+            <a href="https://www.youtube.com/watch?v=KKJz3i4quwI" class="btn yesbutton" target="_blank">click to listen!</a>
+          </div>
+        </div>
+<!--CARD NUMBER 2-->
+
+<!--CARD NUMBER 3-->
+        <div class="card" style="width: 23rem;">
+          <img src="images/imjsutkenpic.png" class="card-img-top pictureforcard" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">"I'm Just Ken"</h5>
+            <p class="card-text"> type</p>
+            <br>
+            <br>
+            <br>
+            <a href="https://www.youtube.com/watch?v=wwux9KiBMjE" class="btn yesbutton" target="_blank">click to listen!</a>
+          </div>
+        </div>
+<!--CARD NUMBER 3-->
+
     </div>
- </div>
- <div class="row">
-  <div class="col-md-12">
-    <h1 class="barbietext fw-bold"> <br>Barbie Movie</h1>
+
   </div>
-</div>
+  <!--END of cards-->
 
 
 
