--- a/musicc.html
+++ b/musicc.html
@@ -19,7 +19,7 @@
     <!--START of navbar-->
 <nav class="navbar navbar-expand-lg color ">
   <div class="container-fluid navbarimage">
-    <a class="navbar-brand styleofnavbarwords" href="index.html">Brianna's Summer</a>
+    <a class="navbar-brand styleofnavbarwords " href="index.html">Brianna's Summer</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -29,7 +29,7 @@
           <a class="nav-link  others styleofnavbarwords"  href="index.html"> Rating</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link others styleofnavbarwords " href="musicc.html"> Music </a>
+          <a class="nav-link others styleofnavbarwords active" href="musicc.html"> Music </a>
         </li>
         <li class="nav-item">
           <a class="nav-link others styleofnavbarwords" href="funfacts.html"> Pictures </a>
@@ -51,7 +51,7 @@
           <img src="/images/pinklizzopic.jpg" class="card-img-top pictureforcard" alt="...">
           <div class="card-body">
             <h5 class="card-title"> "Pink"</h5>
-            <p class="card-text">type</p>
+            <p class="card-text"> Lizzo opened up the movie with this great song, while Barbie walked us through her morning routine. It was quite a bop for my friend and   </p>
             <br>
             <br>
             <br>
