--- a/rating.html
+++ b/rating.html
@@ -38,17 +38,33 @@
 </nav>
  <!--END of navbar-->
  <div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <h1 class="maintext"> I watched the...</h1>
+    <div class="row">
+        <div class="col-md-6">
+            <div class="movierating">
+<h1>Movie Rating</h1>
+<h5> slayed</h5 >
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="characterratings">
+                <h1> Character Ratings</h1>
+                <ol>
+                  <li>blavcj</li>
+                  <li>blavcj</li>
+                  <li>blavcj</li>
+                  <li>blavcj</li>
+                  <li>blavcj</li>
+                  <li>blavcj</li>
+                  <li>blavcj</li>
+                  <li>blavcj</li>
+                  <li>blavcj</li>
+                  <li>blavcj</li>
+                </ol>
+              
+            </div>
+        </div>
     </div>
- </div>
- <div class="row">
-  <div class="col-md-12">
-    <h1 class="barbietext fw-bold"> <br>Barbie Movie</h1>
-  </div>
-</div>
-
+    
  </div>
 
  <footer class="footer">
