--- a/musicc.html
+++ b/musicc.html
@@ -26,13 +26,10 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link  others styleofnavbarwords"  href="index.html"> Rating</a>
+          <a class="nav-link  others styleofnavbarwords"  href="rating.html"> Rating</a>
         </li>
         <li class="nav-item">
           <a class="nav-link others styleofnavbarwords " href="musicc.html"> Music </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link others styleofnavbarwords" href="funfacts.html"> Pictures </a>
         </li>
 
         </li>
@@ -44,14 +41,14 @@
 
  <!--START of cards-->
  <div class="container-fluid justify-content-center">
-    <div class="row justify-content-center cardz">
+    <div class="row justify-content-evenly cardz">
       
 <!--CARD NUMBER 1-->
         <div class="card" style="width: 23rem; ">
           <img src="/images/pinklizzopic.jpg" class="card-img-top pictureforcard" alt="...">
           <div class="card-body">
             <h5 class="card-title"> "Pink"</h5>
-            <p class="card-text">type</p>
+            <p class="card-text">This song by Lizzo opens up the movie while Barbie goes through her daily routine. It is a bop and set the mood off to a happy start.  </p>
             <br>
             <br>
             <br>
@@ -65,7 +62,7 @@
           <img src="/images/dancethenightpic.jpeg" class="card-img-top pictureforcard" alt="...">
           <div class="card-body">
             <h5 class="card-title">"Dance the Night"</h5>
-            <p class="card-text">type </p>
+            <p class="card-text">This bop by Dua Lipa went crazy and my friend and I were jamming. The dancing and the upbeat melody made this one of my favorties.  </p>
             <br>
             <br>
             <br>
@@ -79,7 +76,7 @@
           <img src="images/imjsutkenpic.png" class="card-img-top pictureforcard" alt="...">
           <div class="card-body">
             <h5 class="card-title">"I'm Just Ken"</h5>
-            <p class="card-text"> type</p>
+            <p class="card-text"> This masterpiece by Ryan Gosling was by far the best song in the movie. It was very hype and my friend and I were screaming the lyrcis.   </p>
             <br>
             <br>
             <br>
