--- a/rating.html
+++ b/rating.html
@@ -42,23 +42,19 @@
         <div class="col-md-6">
             <div class="movierating">
 <h1>Movie Rating</h1>
-<h5> slayed</h5 >
+<h5> The movie is a 5 out of 5 star rating and was a masterpiece. The actors, the music, and the dancing all blended together created a great movie. </h5 >
             </div>
         </div>
         <div class="col-md-6">
             <div class="characterratings">
                 <h1> Character Ratings</h1>
                 <ol>
-                  <li>blavcj</li>
-                  <li>blavcj</li>
-                  <li>blavcj</li>
-                  <li>blavcj</li>
-                  <li>blavcj</li>
-                  <li>blavcj</li>
-                  <li>blavcj</li>
-                  <li>blavcj</li>
-                  <li>blavcj</li>
-                  <li>blavcj</li>
+                  <li>Barbie</li>
+                  <li>Ken</li>
+                  <li>Allen</li>
+                  <li>Sasha</li>
+                  <li>Gloria</li>
+          
                 </ol>
               
             </div>
