img fix for real

--- a/musicc.html
+++ b/musicc.html
@@ -45,7 +45,7 @@
       
 <!--CARD NUMBER 1-->
         <div class="card" style="width: 23rem; ">
-          <img src="images/dancethenightpic.jpeg" class="card-img-top pictureforcard" alt="...">
+          <img src="images/pinklizzopic.jpg" class="card-img-top pictureforcard" alt="...">
           <div class="card-body">
             <h5 class="card-title"> "Pink"</h5>
             <p class="card-text">This song by Lizzo opens up the movie while Barbie goes through her daily routine. It is a bop and set the mood off to a happy start.  </p>
